# ipcq.py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: client.py  server.py
