[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "ipcq"
version = "1.1.1"
description = ""
authors = ["Henry Chang <mr.changyuheng@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/changyuheng/ipcq"
packages = [
    {include = "ipcq", from = "packages"},
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
